# fsw_ai_experience_platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
backend/: README.md  __init__.py  main.py  models.py
backend/api/: __init__.py
backend/flow/: __init__.py  generate.py  structure.py
backend/integrations/: README.md  __init__.py  base.py  client.py  github.py  mock.py
backend/llm/: __init__.py  client.py
backend/llm/providers/: __init__.py  anthropic.py  base.py  gemini.py  mock.py
backend/templates/: __init__.py  cfs_app.py
cfs-build/: README.md
frontend/: README.md  app.py
n8n/: README.md
sessions/: README.md
tests/: test_gemini_retry.py  test_generate.py  test_publish.py  test_structure.py
vscode-extension/: README.md
